# HFI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DASHBOARD_OVERVIEW.md  FIRST_GUIDELINES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_UNIFIED_INTERFACE.md  PLAN.md  QUICK_START_GUIDE.md  README.md  REFACTOR_PLAN.md  SECURITY_HARDENING_PLAN.md  SPEC.md  docker-build.sh  docker-compose.yml  docker-validate.sh  init_db.py  pyproject.toml  requirements.txt  scrape_hebrew_threads.py  start_services.py  start_services.sh  test_news_live.py  test_thread_media_download.py  verify_changes.py  verify_setup.py
.gemini/: rules.md
config/: glossary.json  style.txt  voice_profile.json
deploy/: .env.prod.example  Caddyfile  README.md  docker-compose.prod.yml
docs/: MOBILE_WEB_SUPPORT_PLAN.md  SPEC_v2_style_learning.md  UX_E2E_CHECKLIST.md
frontend/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json
k8s/: DEPLOYMENT_CHECKLIST.md  README.md  configmap.yaml  cronjob-scraper.yaml  deploy.sh  deployment-dashboard.yaml  deployment-processor.yaml  deployment-redis.yaml  namespace.yaml  pvc.yaml  secrets.yaml.template  validate-deployment.sh  verify-deployment.sh
tests/: SCRAPER_TEST_SUMMARY.md  conftest.py  scraper_test_report.md  test_alert_detector.py  test_api_auth.py  test_api_content.py  test_api_endpoints.py  test_api_generation.py  test_api_inspiration.py  test_api_notifications.py  test_api_scrape.py  test_api_security_v2.py  test_api_settings.py  test_auto_pipeline.py  test_brief_feedback_model.py  test_brief_themer.py  (+35 more)
(+207 files in other folders)
