[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfi"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.25",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "PyJWT>=2.10.1",
    "httpx>=0.27.2",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "fake-useragent>=1.5.1",
    "beautifulsoup4>=4.12.3",
    "playwright>=1.48.0",
    "langdetect>=1.0.9",
    "python-telegram-bot>=22.6",
    "apscheduler>=3.11.2",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
